rewrite and add tests for number generator, rewrire number generator, change github actions workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+    - name: Test Number Generator
+      run: go test -v ./helpers -count 10000 -failfast
