add secrets to flow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,12 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.23.2'
-
+        
+    - name: Get google secrets
+      env:
+        DATA: ${{ secrets.FIRESTORE }}
+      run: echo $DATA | base64 -di > firestore.json
+            
     - name: Build
       run: go build -v ./...
 
